Добавлена правильная ссылка на подключение сервиса deezer

--- a/templates/app.html
+++ b/templates/app.html
@@ -38,7 +38,7 @@
                 <img src="/static/images/spotify-logo1.svg" onclick="window.location.href = 'https://accounts.spotify.com/authorize?client_id=b1fa88d88e3042d8b40e21af7e55a0ba&response_type=code&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2Fauth_spotify&scope=playlist-modify-private+playlist-modify-public+ugc-image-upload+user-library-read+user-library-modify+user-follow-modify+user-follow-read+playlist-read-private+user-top-read+user-read-email&show_dialog=True'" class="app added-services service-container service not-connected spotify">
                 <img src="/static/images/yandex-logo.svg" onclick="window.location.href = '/add_yandex'" class="app added-services service-container service not-connected yandex">
                 <img src="/static/images/vk-logo1.svg" onclick="window.location.href = '/add_vk'" class="app added-services service-container service not-connected vk">
-                <img src="/static/images/deezer-logo.svg" onclick="window.location.href = '/add_deezer'" class="app added-services service-container service not-connected deezer">
+                <img src="/static/images/deezer-logo.svg" onclick="window.location.href = 'https://connect.deezer.com/oauth/auth.php?app_id=527262&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2Fadd_deezer&perms=basic_access%2Cemail%2Cmanage_library%2Coffline_access%2Cmanage_community%2Cdelete_library%2Clistening_history'" class="app added-services service-container service not-connected deezer">
             </div>
         </div>
         <div class="app transfer-music non-selectable" onclick="showTransferPopUp()">
