--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -122,6 +122,13 @@
             height: calc(24px*var(--deltaH));
             cursor: pointer;
         }
+        &.right-arrow-btn {
+            display: inline-block;
+            margin: 0 calc(2px*var(--deltaW)) calc(4px*var(--deltaH)) calc(-6px*var(--deltaW));
+            width: calc(24px*var(--deltaW));
+            height: calc(24px*var(--deltaH));
+            cursor: pointer;
+        }
         &.service-container {
             display: inline-block;
             width: calc(128px*var(--deltaW));
@@ -454,18 +461,27 @@
             scrollbar-width: 6px;
             &.service {
                 cursor: pointer;
+                display: none;
                 margin: 0 calc(16px*var(--deltaH)) calc(16px*var(--deltaW)) 0;
                 width: calc(96px*var(--deltaW));
                 height: calc(96px*var(--deltaH));
             }
+            &::-webkit-scrollbar {
+                width: 6px;
+            }
+            &::-webkit-scrollbar-thumb {
+                width: 6px;
+                border-radius: 99px;
+                background-color: #9A86C3;
+            }
         }
-        &.popup-service-container::-webkit-scrollbar {
-            width: 6px;
-        }
-        &.popup-service-container::-webkit-scrollbar-thumb {
-            width: 6px;
-            border-radius: 99px;
-            background-color: #9A86C3;
-        }
+    }
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+    &::-webkit-scrollbar-thumb {
+        width: 6px;
+        border-radius: 99px;
+        background-color: #9A86C3;
     }
 }
