--- a/templates/app.html
+++ b/templates/app.html
@@ -35,8 +35,12 @@
             <img src="/static/images/add-service.svg" class="app added-services add-service-button">
             <img src="/static/images/left-arrow.svg" class="app added-services left-arrow-btn">
             <div class="app added-services service-container non-selectable">
-                <img src="/static/images/spotify-logo1.svg" onclick="window.location.href = 'https://accounts.spotify.com/authorize?client_id=b1fa88d88e3042d8b40e21af7e55a0ba&response_type=code&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2Fauth_spotify&scope=playlist-modify-private+playlist-modify-public+ugc-image-upload+user-library-read+user-library-modify+user-follow-modify+user-follow-read+playlist-read-private+user-top-read+user-read-email&show_dialog=True'"
-                    class="app added-services service-container service not-connected spotify" />
+                <div class="app added-services service-container service not-connected spotify">
+                    <img src="/static/images/close.svg" alt="" class="app added-services service-container service close-btn spotify " />
+                    <img src="/static/images/spotify-logo1.svg" onclick="window.location.href = 'https://accounts.spotify.com/authorize?client_id=b1fa88d88e3042d8b40e21af7e55a0ba&response_type=code&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2Fauth_spotify&scope=playlist-modify-private+playlist-modify-public+ugc-image-upload+user-library-read+user-library-modify+user-follow-modify+user-follow-read+playlist-read-private+user-top-read+user-read-email&show_dialog=True'"
+                        class="app added-services service-container service image spotify not-connected">
+                </div>
+
                 <img src="/static/images/yandex-logo.svg" onclick="window.location.href = '/add_yandex'" class="app added-services service-container service not-connected yandex" />
                 <img src="/static/images/vk-logo1.svg" onclick="window.location.href = '/add_vk'" class="app added-services service-container service not-connected vk" />
                 <img src="/static/images/deezer-logo.svg" onclick="window.location.href = 'https://connect.deezer.com/oauth/auth.php?app_id=527262&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2Fadd_deezer&perms=basic_access%2Cemail%2Cmanage_library%2Coffline_access%2Cmanage_community%2Cdelete_library%2Clistening_history'"
@@ -105,7 +109,7 @@
             <div class="app popup-container popup-label main">{{ _('Перенести ваши плейлисты, треки, артистов и альбомы') }}</div>
             <div class="app popup-container popup-label service-pick">{{ _('Выберите сервис для переноса:') }}</div>
             <div class="app popup-container popup-service-container non-selectable">
-                <img src="/static/images/spotify 96x96.svg" onclick="chooseService('spotify')" class="app popup-container popup-service-container service spotify" />
+                <img src="/static/images/spotify 96x96.svg" onclick="chooseService('spotify')" class="app popup-container popup-service-container service spotify">
                 <img src="/static/images/deezer 96x96.svg" onclick="chooseService('deezer')" class="app popup-container popup-service-container service deezer" />
                 <img src="/static/images/vk 96x96.svg" onclick="chooseService('vk')" class="app popup-container popup-service-container service vk" />
                 <img src="/static/images/yandex 96x96.svg" onclick="chooseService('yandex')" class="app popup-container popup-service-container service yandex" />
@@ -118,4 +122,3 @@
 <script src="/static/js/adaptive-design.js"></script>
 <script src="{{ url_for('babel_catalog') }}"></script>
 <script src="/static/js/app.js"></script>
-<script src="/static/js/test.js"></script>
