--- a/static/index.css
+++ b/static/index.css
@@ -377,6 +377,22 @@ body {
   filter: grayscale(100%);
   cursor: pointer;
 }
+.app.added-services.service-container.service.image {
+  width: calc(32px * var(--deltaW));
+  height: calc(32px * var(--deltaH));
+  margin: calc(-12px * var(--deltaH)) 0 0 0;
+  z-index: 10;
+}
+.app.added-services.service-container.service.close-btn {
+  display: block;
+  position: relative;
+  float: right;
+  z-index: 1000;
+  width: calc(12px * var(--deltaW));
+  height: calc(12px * var(--deltaH));
+  cursor: pointer;
+  margin: 0;
+}
 .app.transfer-music {
   display: flex;
   justify-content: center;
