--- a/templates/app.html
+++ b/templates/app.html
@@ -37,14 +37,12 @@
             <div class="app added-services service-container non-selectable">
                 <div class="app added-services service-container service not-connected spotify">
                     <img src="/static/images/close.svg" alt="" class="app added-services service-container service close-btn spotify " />
-                    <img src="/static/images/spotify-logo1.svg" onclick="window.location.href = '{{ url_spotify }}'"
-                        class="app added-services service-container service image spotify not-connected">
+                    <img src="/static/images/spotify-logo1.svg" onclick="window.location.href = '{{ url_spotify }}'" class="app added-services service-container service image spotify not-connected">
                 </div>
 
                 <img src="/static/images/yandex-logo.svg" onclick="window.location.href = '/add_yandex'" class="app added-services service-container service not-connected yandex" />
                 <img src="/static/images/vk-logo1.svg" onclick="window.location.href = '/add_vk'" class="app added-services service-container service not-connected vk" />
-                <img src="/static/images/deezer-logo.svg" onclick="window.location.href = '{{ url_deezer }}'"
-                    class="app added-services service-container service not-connected deezer" />
+                <img src="/static/images/deezer-logo.svg" onclick="window.location.href = '{{ url_deezer }}'" class="app added-services service-container service not-connected deezer" />
             </div>
             <img src="/static/images/right-arrow.svg" class="app added-services right-arrow-btn">
         </div>
@@ -109,10 +107,10 @@
             <div class="app popup-container popup-label main">{{ _('Перенести ваши плейлисты, треки, артистов и альбомы') }}</div>
             <div class="app popup-container popup-label service-pick">{{ _('Выберите сервис для переноса:') }}</div>
             <div class="app popup-container popup-service-container non-selectable">
-                <img src="/static/images/spotify 96x96.svg" onclick="chooseService('spotify')" class="app popup-container popup-service-container service spotify">
-                <img src="/static/images/deezer 96x96.svg" onclick="chooseService('deezer')" class="app popup-container popup-service-container service deezer" />
-                <img src="/static/images/vk 96x96.svg" onclick="chooseService('vk')" class="app popup-container popup-service-container service vk" />
-                <img src="/static/images/yandex 96x96.svg" onclick="chooseService('yandex')" class="app popup-container popup-service-container service yandex" />
+                <img src="/static/images/spotify 96x96.svg" class="app popup-container popup-service-container service spotify">
+                <img src="/static/images/deezer 96x96.svg" class="app popup-container popup-service-container service deezer" />
+                <img src="/static/images/vk 96x96.svg" class="app popup-container popup-service-container service vk" />
+                <img src="/static/images/yandex 96x96.svg" class="app popup-container popup-service-container service yandex" />
             </div>
         </div>
 
