--- a/templates/app.html
+++ b/templates/app.html
@@ -103,7 +103,7 @@
     </div>
     <div class="app popup">
         <div class="app popup-container">
-            <img onclick="this.parentElement.parentElement.style.display = 'none'" src="/static/images/arrow-back.svg" alt="goback" class="app popup-container goback-btn">
+            <img src="/static/images/arrow-back.svg" alt="goback" class="app popup-container goback-btn">
             <div class="app popup-container popup-label main">{{ _('Перенести ваши плейлисты, треки, артистов и альбомы') }}</div>
             <div class="app popup-container popup-label service-pick">{{ _('Выберите сервис для переноса:') }}</div>
             <div class="app popup-container popup-service-container non-selectable">
@@ -112,6 +112,16 @@
                 <img src="/static/images/vk 96x96.svg" class="app popup-container popup-service-container service vk" />
                 <img src="/static/images/yandex 96x96.svg" class="app popup-container popup-service-container service yandex" />
             </div>
+            <div class="app popup-container progress-container">
+                <img src="/static/images/spotifier 96x96.svg" class="app popup-container image spotifier">
+                <div class="app popup-container progress-bar-container">
+                    <div class="app popup-container progress-bar">
+
+                    </div>
+                </div>
+                <img src="/static/images/spotify 96x96.svg" class="app popup-container image serviceLogo">
+            </div>
+
         </div>
 
 
