--- a/static/index.css
+++ b/static/index.css
@@ -237,13 +237,13 @@ body {
   transition-duration: 0.2s;
 }
 .app.slider {
-  position: sticky;
+  position: fixed;
   top: 0;
   transition-duration: 0.25s;
   box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
   background-color: #494781;
   width: calc(256px * var(--deltaW));
-  height: calc(900px * var(--deltaH));
+  height: 100vh;
   float: left;
   margin: 0;
 }
@@ -500,7 +500,6 @@ body {
   float: right;
   overflow-y: hidden;
   width: calc(1050px * var(--deltaW));
-  height: calc(900px * var(--deltaH));
 }
 .app.chosen {
   width: calc(200px * var(--deltaW));
@@ -555,11 +554,11 @@ body {
   width: var(--songWidth);
   height: var(--songHeight);
   margin: var(--songMargin);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   border-radius: 8px;
   background-color: rgba(70, 67, 123, 0.25);
-  text-decoration: none;
-  text-overflow: ellipsis;
-  overflow: hidden;
 }
 .app.song.checkbox {
   background: none;
@@ -571,7 +570,6 @@ body {
   margin: 0;
   background: none;
   border-radius: 0;
-  align-items: flex-start;
   width: var(--songLabelWidth);
 }
 .app.song.service {
@@ -582,8 +580,6 @@ body {
   margin: var(--songServiceMargin);
 }
 .app.song.option1 {
-  vertical-align: top;
-  align-items: flex-start;
   border-radius: 0;
   margin: var(--songOption1Margin);
   background: none;
@@ -593,7 +589,6 @@ body {
   margin: var(--songOption2Margin);
   background: none;
   border-radius: 0;
-  align-items: flex-start;
   width: var(--songOption2Width);
 }
 .app.song.change-btn {
@@ -723,6 +718,33 @@ body {
   width: 6px;
   border-radius: 99px;
   background-color: #9A86C3;
+}
+.app.popup-container.progress-container {
+  width: calc(439px * var(--deltaW));
+  height: calc(96px * var(--deltaH));
+  display: none;
+  align-items: center;
+  justify-content: center;
+  margin: calc(140px * var(--deltaH)) 0 0 calc(56px * var(--deltaW));
+}
+.app.popup-container.image {
+  width: calc(96px * var(--deltaW));
+  height: calc(96px * var(--deltaH));
+  border-radius: 0;
+}
+.app.popup-container.progress-bar-container {
+  height: calc(40px * var(--deltaH));
+  display: flex;
+  align-items: center;
+  background-color: #323061;
+  border-radius: 0;
+}
+.app.popup-container.progress-bar {
+  background: linear-gradient(90deg, #FF527F 0%, #FD9590 100%);
+  padding: 1%;
+  height: calc(24px * var(--deltaH));
+  width: 10%;
+  border-radius: 0;
 }
 .app::-webkit-scrollbar {
   width: 6px;
