--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -499,8 +499,18 @@
             height: calc(96px*var(--deltaH));
             border-radius: 0;
         }
+        &.container {
+            width: calc(247px*var(--deltaW));
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
         &.progress-bar-container {
             height: calc(40px*var(--deltaH));
+            margin: calc(14px*var(--deltaH)) 0 0 0;
+            width: 100%;
             display: flex;
             align-items: center;
             background-color: rgba(50, 48, 97, 1);
@@ -508,10 +518,16 @@
         }
         &.progress-bar {
             background: linear-gradient(90deg, #FF527F 0%, #FD9590 100%);
-            padding: 1%;
+            padding: 0;
             height: calc(24px*var(--deltaH));
-            width: 10%;
+            width: 0;
             border-radius: 0;
+        }
+        &.text {
+            width: 100%;
+            text-align: center;
+            height: 20px;
+            color: #CFC4C5;
         }
     }
     &::-webkit-scrollbar {
